frontend/test/should_pass/basic_012.grg
rule r {
	x : Node;

	replace {
		y : Node;
	}
}

